--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,7 @@
 <resources>
     <string name="app_name">WearWhip</string>
     <string name="launcher_name">Whip</string>
-    <!--
-    This string is used for square devices and overridden by hello_world in
-    values-round/strings.xml for round devices.
-    -->
-    <string name="hello_world">Hello Square World!</string>
-    <string name="whip">Whip!</string>
+    <string name="instructions">Shake your watch</string>
+    <string name="or">or</string>
+    <string name="close">close</string>
 </resources>
